product-catalog-service/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-catalog-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /productcatalog
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /productcatalog
            pathType: Prefix
            backend:
              service:
                name: product-catalog-service-svc
                port:
                  number: 8081
